# cppSync

./: .gitignore  CMakeLists.txt  README.md  backup.cpp  backup.hpp  compare.cpp  compare.hpp  find_duplicates.cpp  find_duplicates.hpp  help.cpp  help.hpp  init.cpp  init.hpp  load_configs.cpp  load_configs.hpp  main.cpp  recHashing.cpp  recHashing.hpp
QA/: Unit_test_sha256.cpp
lib/: functions.cpp  functions.hpp  json.cpp  json.hpp  sha256.hpp
lib/Location/: Location.cpp  Location.hpp
lib/Location/methods/: backup.cpp  compare.cpp  find_duplicates.cpp  get_choice.cpp  get_state.cpp  init.cpp  loadconfig.cpp  rec_hashing.cpp  restore.cpp
lib/Tree/: Node.cpp  Node.hpp  Tree.cpp  Tree.hpp  helper_functions.hpp
lib/Tree/methods/: path_to_nodes.cpp
lib/myLib/: MyJSON.cpp  functions.cpp  functions.hpp  playground.cpp  sha256.cpp  sha256.hpp  test
src/: main.cpp
src/Configuration/: Configs.cpp  Configs.hpp
src/Configuration/methods/: get_clean_lines.cpp  get_node_config_ptr.cpp  load_location_config.cpp  load_node_configs.cpp
src/Location/: Location.cpp  Location.hpp
src/Location/methods/: add_path_to_tree.cpp  backup.cpp  compare.cpp  configure.cpp  find_duplicates.cpp  hashing.cpp  init.cpp  is_in_scope.cpp  load_configs.cpp  restore.cpp
src/Path/: Path.cpp  Path.hpp
src/Tree/: Node.cpp  Node.hpp
src/Tree/methods/: detect_git_repos.cpp  get_leafs.cpp  get_node_config_ptr.cpp
src/hash_functions/: sha256.cpp  sha256.hpp
src/helper_functions/: cppSync_help.cpp  current_date_time.cpp  escaping.cpp  get_choice.cpp  get_name.cpp  get_state.cpp  helper_functions.hpp  json.cpp  parse_args.cpp  raw_inputs.cpp  user_compare.cpp
tests/: Main.sh  check.sha256sum  configs.sh  test_1.sh  test_2.sh  test_3.sh  test_4.sh  test_5.sh
tests/functions/: backup.sh  create_backup_x.sh  create_main.sh  create_testing_env.sh  cycle.sh  init_location.sh  verify.sh
